# knowledge-graphs-rag-multimodal-ai

./: .README.md.un~  .gitignore  README.md  pyproject.toml
Python/: pyproject.toml  requirements.txt
Python/foundation_models/: 13_foundation_model_embeddings_in_python.ipynb  14_image_foundation_models_embeddings.ipynb  15_multimodal_integration_embeddings.ipynb  16_translational_multimodal_pipeline.ipynb  17_tiny_self_supervised_model_demo.ipynb
Python/knowledge_graphs/: 06_graph_thinking_in_python.ipynb  07_building_knowledge_graphs_networkx.ipynb  08_querying_bio_knowledge_graphs.ipynb  09_building_knowledge_graphs_from_biological_tables.ipynb
Python/rag/: 18_rag_fundamentals.ipynb  19_building_a_simple_retriever.ipynb  20_full_rag_pipeline_prompt_design.ipynb  21_scientific_pdf_rag.ipynb  22_vector_databases_for_rag.ipynb
Python/semantic_graphs/: 10_rdf_and_triples_in_python.ipynb  11_sparql_querying.ipynb  12_biomedical_ontologies_semantic_kgs.ipynb
