[project]
name = "knowledge-graphs-and-multimodal-ai-notebooks"
version = "0.1.0"
description = "Notebooks exploring knowledge graphs, multimodal AI, RAG, and vector databases"
requires-python = ">=3.10"

dependencies = [
    # Core scientific stack
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "scipy",
    "scikit-learn",
    "tqdm",

    # Graphs and knowledge graphs
    "networkx",
    "rdflib",

    # Foundation models / embeddings
    "torch",
    "transformers",
    "sentence-transformers",
    "accelerate",
    "huggingface-hub",

    # Image handling
    "pillow",

    # PDF ingestion
    "pymupdf",

    # Vector search
    "faiss-cpu",

    # Notebook environment
    "jupyter",
    "notebook",
    "ipykernel",
    "ipywidgets"
]
